--- a/app/assets/stylesheets/review.css.sass
+++ b/app/assets/stylesheets/review.css.sass
@@ -50,9 +50,7 @@
 			text-align: center
 			float: left
 			margin: 25px 4%
+			&.active,
 			&:hover
 				background: $w
 				cursor: pointer
-			a
-				&:active
-					background: $b10
