--- a/app/views/pages/economical_links.html.haml
+++ b/app/views/pages/economical_links.html.haml
@@ -4,10 +4,11 @@
 			%h1 I bought ExampleCo toothpaste
 			%h2 because it performes well economically
 
-			%ul.second-links
-				%li
-					= link_to "value for money", "value_path", :class => 'yellow'
-				%li
-					= link_to "tax compliance", "tax_path", :class => 'yellow'
-				%li
-					= link_to "community investment", "community_path", :class => 'yellow'
+	%section.content
+		%ul.second-links
+			%li
+				= link_to "value for money", "value_path", :class => 'yellow'
+			%li
+				= link_to "tax compliance", "tax_path", :class => 'yellow'
+			%li
+				= link_to "community investment", "community_path", :class => 'yellow'
